--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/noahgribbin/Cornucopia#readme",
   "dependencies": {
-    "aws-sdk": "^2.27.0",
+    "aws-sdk": "^2.41.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.1",
-    "debug": "^2.6.2",
+    "debug": "^2.6.3",
     "del": "^2.2.2",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
@@ -37,7 +37,8 @@
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.7",
     "morgan": "^1.8.1",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "aws-sdk-mock": "^1.6.1",
